--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="slider-container">
-        <div class="slide active" style="background-image: url('image-1.jpg');"></div>
+        <div class="slide active"></div>
         <div class="slide"></div>
         <div class="slide"></div>
         <div class="slide"></div>
