--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 </head>
 <body>
     <div class="slider-container">
-        <div class="slide active"></div>
-        <div class="slide"></div>
-        <div class="slide"></div>
-        <div class="slide"></div>
-        <div class="slide"></div>
+        <div class="slide active" style="background-image: url('image-1.jpg');"></div>
+        <div class="slide" style="background-image: url('image-2.jpg');"></div>
+        <div class="slide" style="background-image: url('image-3.jpg');"></div>
+        <div class="slide" style="background-image: url('image-4.jpg');"></div>
+        <div class="slide" style="background-image: url('image-5.jpg');"></div>
 
         <button class="arrow left-arrow" id="left">
             <i class="fas fa-arrow-left"></i>
